tests/PhiCore/compile_failure/src/algorithm/string_length/count_nullptr.fail.cpp
#include <phi/algorithm/string_length.hpp>

int main()
{
    phi::usize l = phi::string_length(nullptr, 0u);
}
